# pacserver

./: .gitignore  CMakeLists.txt  README.md  i18n.cmake
lib/: CMakeLists.txt  alpm.h
src/: CMakeLists.txt  callback.c  conf.c  ini.c  ini.h  pacman-conf.c  pacman.c  protocol.c  protocol.h  util-common.c  util-common.h  util.c
test/: client.py
